Feature/asset history (#4)
* Add historical data retrieval for assets with API endpoint and service methods

* Update dependencies in requirements.txt and enhance logging in web_api.py

- Bump boto3 version from 1.42.7 to 1.42.8 and downgrade duckdb from 1.4.3 to 1.4.2 in requirements.txt for compatibility.
- Add logging configuration in web_api.py to set the logging level to INFO for better monitoring.
- Clean up whitespace in the get_asset_history function for improved code readability.

* Enhance B3ScrapperService to support fetching data for specific target dates with retry logic

- Updated the fetch_data method to allow specifying a target date for data retrieval, improving flexibility.
- Implemented retry logic to handle HTTP errors, attempting to fetch data for previous business days if the target file is not found.
- Added logging for better traceability of data fetching operations.
- Cleaned up whitespace in asset.py for improved code readability.
- Introduced unique index and deduplication SQL commands in md_query.py to enhance database integrity for historical data.

* Implement unique index creation and deduplication for B3 historical data

- Added logic to ensure a unique index is created for the B3 historical data table, enhancing data integrity.
- Implemented deduplication handling in case of index creation failure, improving robustness of data insertion.
- Cleaned up whitespace for better code readability.

* Implement transformed historical data retrieval in MotherDuckLakeService

- Added a new method `get_transformed_historical_data` to fetch and transform historical data for a specific ticker, enhancing data processing capabilities.
- Updated the `AssetService` to utilize the new method for retrieving historical data.
- Adjusted the file path for the B3 parser to reflect the correct asset location, ensuring accurate data fetching.

* Enhance asset data retrieval and transformation

- Updated swagger.yaml to include closing prices for PETR4 and VAL
